--- a/getting-started/first-test-run/quick-validation.mdx
+++ b/getting-started/first-test-run/quick-validation.mdx
@@ -1,139 +1,191 @@
 ---
-title: "Quick Validation Checklist"
-description: "Review essential checks to confirm a successful setup: verifying headers, running a demo test, inspecting output, and ensuring environment consistency. This page distills the key steps for a fast confidence boost before deeper usage."
+title: "Quick Validation and Sanity Check"
+description: "Run a quick test cycle to confirm your environment is functional. Follow guidance to check your installation, run sample tests, and interpret typical outputs, so you know your setup is correct before diving deeper."
 ---
 
-# Quick Validation Checklist
+# Quick Validation and Sanity Check
 
-This checklist guides you through crucial verification steps to confirm your GoogleTest and GoogleMock setup is successful and ready for use. Follow these essential checks for a fast confidence boost before deeper exploration or running your own tests.
+Ensure your GoogleTest and GoogleMock setup is functional by running a quick test cycle. This page guides you through checking your installation, executing sample tests, and interpreting common test output patterns, so you can confidently proceed with deeper testing.
 
 ---
 
-## 1. Verify Header Inclusion
+## 1. Confirm Your Installation
 
-Ensure you can include the main GoogleTest header in your test file without errors:
+Before running any tests, verify that GoogleTest and GoogleMock are properly installed and linked.
 
-```cpp
-#include <gtest/gtest.h>
+### Steps to Verify:
+
+1. **Create a Simple Mock Class and Test**
+
+   Use a minimal mock class to confirm that mocking facilities work as expected.
+
+   ```cpp
+   #include <gmock/gmock.h>
+   #include <gtest/gtest.h>
+
+   class Foo {
+    public:
+     virtual ~Foo() = default;
+     virtual int DoBar(int x) = 0;
+   };
+
+   class MockFoo : public Foo {
+    public:
+     MOCK_METHOD(int, DoBar, (int x), (override));
+   };
+
+   TEST(MockTest, BasicExpectation) {
+     MockFoo mock;
+     EXPECT_CALL(mock, DoBar(::testing::_))
+         .WillOnce(::testing::Return(5));
+
+     EXPECT_EQ(mock.DoBar(10), 5);
+   }
+
+   int main(int argc, char** argv) {
+     testing::InitGoogleMock(&argc, argv);
+     return RUN_ALL_TESTS();
+   }
+   ```
+
+2. **Build and Run the Test**
+
+   Follow your project’s build configuration (using CMake, Bazel, or other build system) to compile this test.
+
+3. **Check Test Results**
+
+   If your installation is correct, the test will pass, displaying a success message like:
+
+   ```
+   [==========] Running 1 test from 1 test suite.
+   [----------] Global test environment set-up.
+   [----------] 1 test from MockTest
+   [ RUN      ] MockTest.BasicExpectation
+   [       OK ] MockTest.BasicExpectation (0 ms)
+   [----------] 1 test from MockTest (0 ms total)
+
+   [----------] Global test environment tear-down
+   [==========] 1 test from 1 test suite ran. (0 ms total)
+   [  PASSED  ] 1 test.
+   ```
+
+
+### Troubleshooting Installation Failures
+
+- If you get linker errors, ensure that your build system links to `gmock` and `gtest` libraries.
+- If headers are missing, confirm that include paths reference the `googletest` source or installation directory.
+- For platform or compiler compatibility issues, check the [Supported Platforms Matrix](https://github.com/google/googletest/blob/main/docs/README.md#supported-platforms).
+
+---
+
+## 2. Run the Sample Tests Included with GoogleTest
+
+GoogleTest comes with a suite of sample tests that exercise core functionality. Running these tests validates your environment beyond just minimal mocks.
+
+### How to Run Sample Tests
+
+- Navigate to your `googletest` source directory.
+- Use the build tool (e.g., `bazel test //googletest/...` or `cmake` with `ctest`) to build and run all tests.
+
+Successful completion with all tests passing confirms a robust setup ready for use.
+
+---
+
+## 3. Understand Typical Test Output
+
+Knowing how to read GoogleTest and GoogleMock output helps you quickly spot problems or confirm correctness.
+
+### Expected Successful Call Output
+
+When your expectation is met, the log includes messages similar to:
+
+```
+FILE:#: EXPECT_CALL(mock_foo, DoBar(_)) invoked
+Stack trace:
+
+FILE:#: Mock function call matches EXPECT_CALL(mock_foo, DoBar(_))...
+    Function call: DoBar(10)
+          Returns: 5
+Stack trace:
 ```
 
-For code involving mocks, also include GoogleMock's header:
+### Common Warning Messages
 
-```cpp
-#include <gmock/gmock.h>
-```
+#### Uninteresting Call Warning
 
-If these headers fail to include, re-check your include paths and installation.
-
-## 2. Write and Build a Minimal Test
-
-Create a simple test to confirm your environment compiles and links correctly.
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(SanityCheck, Truth) {
-  EXPECT_TRUE(true);
-}
-```
-
-Compile this with your build setup linking against GoogleTest (and GoogleMock if mocking is used).
-
-*Successful compilation and linking mean your build environment and dependencies are configured properly.*
-
-## 3. Run the Test Binary
-
-Execute the compiled test binary. It should automatically run all registered tests and output a report.
-
-Expected output for the sample test:
+Appears when a method with no explicit expectation is called.
 
 ```
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from SanityCheck
-[ RUN      ] SanityCheck.Truth
-[       OK ] SanityCheck.Truth (0 ms)
-[----------] 1 test from SanityCheck (0 ms total)
-
-[----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
+GMOCK WARNING:
+Uninteresting mock function call - returning default value.
+    Function call: DoBar(42)
+NOTE: You can safely ignore the above warning unless this call should not happen.  Do not suppress it by adding an EXPECT_CALL() if you don't mean to enforce the call.
 ```
 
-A zero exit code indicates success, while a non-zero code indicates failure.
+This is informational, reminding you about calls made to mock methods without `EXPECT_CALL`.
 
-## 4. Inspect Output for Warning or Errors
+#### Excessive Call Failure
 
-- **No warnings or linker errors:** Your setup is sound and GoogleTest is functioning.
-- **Unexpected warnings about uninteresting mock calls:** Consider adding `EXPECT_CALL` or switch to using `NiceMock` to suppress noise.
-- **Missing tests in output:** Ensure your test code is correctly linked and tests are registered.
+If a mock function is called more times than expected:
 
-## 5. Check Environment Consistency
+```
+Mock function called more times than expected - returning default value.
+    Function call: DoBar(10)
+          Returns: 0
+         Expected: to be called once
+           Actual: called twice - over-saturated and active
+```
 
-- Confirm your test binary uses the same standard library and compiler settings that GoogleTest was built with.
-- Verify that all dynamic libraries (if any) of GoogleTest/GoogleMock are properly found during execution.
+This indicates a logic error where test expectations are violated.
 
-## 6. Optional: Run Sample Client Tests
+### Interpreting Failures
 
-If available, run example tests or sample tests bundled with GoogleTest or GoogleMock:
-
-- They often reside in a `samples/` or `tests/` directory.
-- Successful runs verify that all components, features, and integrations work as expected.
-
----
-
-### Troubleshooting Tips
-
-- If inclusion fails, check your `-I` compiler flags and install targets.
-- Linker errors commonly indicate missing `-lgtest` or `-lgmock` libraries or improper linking order.
-- Running with `--gmock_verbose=info` provides detailed tracing for mock calls.
-- Use `gtest_discover_tests` if integrated with CMake to automate test discovery.
+GoogleTest provides clear messages explaining the mismatch between expected and actual calls, including argument values, call counts, and stack traces.
 
 ---
 
-### Final Notes
+## 4. Verify Your First Test Workflow
 
-Successfully passing this checklist means your environment is ready to write and run GoogleTest and GoogleMock tests confidently.
+Once your setup confirms successful compilation and execution of a simple test, you can proceed with writing and running more comprehensive tests.
 
-For detailed setup instructions, writing your first test, and using mocks effectively, consult related documentation sections.
+### Best Practices
 
----
+- Establish expectations **before** exercising the mock.
+- Use matchers like `_` to allow flexible argument matching when specifics are irrelevant.
+- Use `WillOnce` and `WillRepeatedly` to specify return values or actions.
+- Utilize sequences (`InSequence`) to enforce call order if needed.
 
-## Related Documentation
+### Tips
 
-- [Installation Instructions](https://github.com/google/googletest/blob/main/docs/getting-started/setup-basics/installation-instructions.md) 
-- [Writing and Building Your First Test](https://github.com/google/googletest/blob/main/docs/getting-started/first-test-run/writing-first-test.md)
-- [Using Mocks with GoogleMock](https://github.com/google/googletest/blob/main/docs/gmock_for_dummies.md)
-- [Running and Validating Tests](https://github.com/google/googletest/blob/main/docs/getting-started/first-test-run/running-tests.md)
-- [Troubleshooting Common Setup Issues](https://github.com/google/googletest/blob/main/docs/getting-started/first-test-run/troubleshooting-setup.md)
-
----
-
-**Tip:** Always call `testing::InitGoogleTest(&argc, argv);` before running tests to ensure correct command-line flag parsing and test registration.
-
+- Control verbosity of Mock's output via the `--gmock_verbose` flag (`info`, `warning`, `error`).
+- Suppress uninteresting call warnings using `NiceMock<T>` if they clutter output.
 
 ---
 
-# Summary
+## 5. Next Steps
 
-This Quick Validation Checklist distills the key steps for verifying your GoogleTest and GoogleMock setup post-installation. It covers header verification, writing and compiling a minimal test, running the test binary and analyzing output, and ensuring environment consistency. Troubleshooting tips and related documentation links empower users to swiftly resolve common setup issues and progress to writing effective tests.
+- Explore the [Writing and Running Your First Test](../first-test-run/writing-running-first-test) guide for a full walkthrough.
+- Dive into the [gMock Cookbook](../docs/gmock_cook_book.md) for recipes on mocking techniques and complex usage.
+- Review the [Mocking Reference](../docs/reference/mocking.md) for API details.
+- For environment setup issues, consult the [Troubleshooting Common Issues](../getting-started/troubleshooting-getting-started/common-setup-issues).
 
-**Key Sections:**
-- Header Inclusion Verification
-- Minimal Test Compilation
-- Test Execution and Output Inspection
-- Environment Validation
-- Troubleshooting Guidance
+---
 
-**Important Links:**
-- Installation Instructions
-- First Test Writing Guide
-- Running Tests
-- Mocking Basics
+## 6. Resources
 
-**Next Steps:**
-- Develop your test suites confidently
-- Explore mocking and advanced assertions
-- Consult full Getting Started and FAQ sections for comprehensive support
+- [GoogleTest Primer](../guides/getting_started_workflows/introduction_and_primer)
+- [GoogleMock for Dummies](../docs/gmock_for_dummies.md)
+- [API Reference - Mocking](../api-reference/mocking-framework/mock-classes-methods)
+- Official GoogleTest GitHub - https://github.com/google/googletest
 
-Navigate to adjacent guides within Getting Started or consult the API Reference for detailed assertions and mocking usage.
+<Tip>
+Always run your test binary after adding or modifying expectations to catch errors early.
+</Tip>
+
+<Note>
+If this is your first time using GoogleMock, start simple, then progressively add expectations and default behaviors.
+</Note>
+
+<Warning>
+Avoid setting expectations after exercising the mock — this leads to undefined behavior.
+</Warning>
