--- a/api-reference/core-testing/assertions.mdx
+++ b/api-reference/core-testing/assertions.mdx
@@ -1,366 +1,383 @@
 ---
-title: "Assertions Reference"
-description: "Comprehensive list of built-in assertion macros (e.g., EXPECT_*, ASSERT_*) covering equality, exceptions, fatal/non-fatal failures, and edge cases. Each assertion details its syntax, parameters, return/side-effects, and usage tips—helping users write expressive, robust tests."
+title: "Assertions & Predicate Assertions"
+description: "Details the assertion macros and predicate assertion mechanisms available in GoogleTest, including standard checks for equality, conditions, exceptions, and user-defined predicates. Includes guidelines for fatal and non-fatal failures and debugging support."
 ---
 
-# Assertions Reference
+# Assertions & Predicate Assertions
 
-A definitive guide to GoogleTest's comprehensive assertion macros, helping you write expressive, robust tests with confidence and precision.
+GoogleTest empowers you to write precise, expressive assertions that verify the correctness of your code. These assertions cover a wide spectrum—from simple Boolean conditions, equality checks, and exception testing, to sophisticated predicate assertions that enable clear diagnostics for complex expressions.
 
----
-
-## Overview of Assertions
-
-GoogleTest provides a rich set of built-in assertion macros to verify conditions in your tests. They come in pairs:
-
-- `EXPECT_*` macros generate **nonfatal** failures that allow the test function to continue.
-- `ASSERT_*` macros generate **fatal** failures that abort the current test function immediately.
-
-You can always append custom failure messages to assertions using the stream operator (`<<`), providing detailed context upon failure.
-
-```cpp
-EXPECT_TRUE(ptr != nullptr) << "Pointer must not be null";
-```
+This document guides you through GoogleTest's comprehensive assertion macros and predicate mechanisms, helping you write tests that not only catch bugs but present them with actionable clarity.
 
 ---
 
-## Categories of Assertions
+## Explicit Success and Failure
 
-GoogleTest assertions are organized into distinct categories, each addressing a class of test needs.
+GoogleTest provides assertion macros for signaling unambiguous success or failure conditions, useful when a control flow, rather than a Boolean expression, dictates the test outcome.
 
-### 1. Explicit Success and Failure
+### SUCCEED()
 
-#### SUCCEED
-```cpp
-SUCCEED();
-```
-Generates a test success. Useful for documenting expected success points, but does not cause test to pass alone.
+- **Purpose**: Marks a test as successful at a specific point.
+- **Behavior**: Does not affect the overall test result unless no failures occur.
+- **Usage**:
 
-#### FAIL
-```cpp
-FAIL();
-```
-Generates a fatal failure, returning immediately from the current void function.
+  ```cpp
+  SUCCEED();
+  SUCCEED() << "Step succeeded with value " << value;
+  ```
 
-#### ADD_FAILURE
-```cpp
-ADD_FAILURE();
-```
-Generates a nonfatal failure, allowing the test to continue.
+### FAIL()
 
-#### ADD_FAILURE_AT
-```cpp
-ADD_FAILURE_AT("file.cc", 42);
-```
-Generates a nonfatal failure reported at specified file and line.
+- **Purpose**: Generates a fatal failure, aborting the current function immediately.
+- **Behavior**: Must be used **only** in `void` functions.
 
----
+  ```cpp
+  FAIL() << "Unexpected branch hit.";
+  ```
 
-### 2. Generalized Assertions with Matchers
+### ADD_FAILURE()
 
-#### EXPECT_THAT / ASSERT_THAT
-```cpp
-EXPECT_THAT(value, matcher);
-ASSERT_THAT(value, matcher);
-```
-Use powerful matchers to verify complex conditions with clear failure messages. For example:
+- **Purpose**: Generates a non-fatal failure, allowing the test to continue.
 
-```cpp
-EXPECT_THAT(str, StartsWith("Hello"));
-ASSERT_THAT(numbers, AllOf(Ge(5), Lt(10)));
-```
+  ```cpp
+  ADD_FAILURE() << "Non-fatal failure explanation.";
+  ```
 
-See the [Matchers Reference](matchers.md) for the full matcher catalog.
+### ADD_FAILURE_AT(file_path, line_number)
+
+- **Purpose**: Generates a non-fatal failure pointing to a specific source location.
+
+  ```cpp
+  ADD_FAILURE_AT("foo.cc", 42) << "Failure message at custom location";
+  ```
 
 ---
 
-### 3. Boolean Conditions
+## Boolean Conditions
 
-#### EXPECT_TRUE / ASSERT_TRUE
-```cpp
-EXPECT_TRUE(condition);
-ASSERT_TRUE(condition);
-```
-Asserts that a condition is true.
+Verify that conditions evaluate to true or false using paired macros:
 
-#### EXPECT_FALSE / ASSERT_FALSE
+| Assertion      | Verifies                       | Behavior on Failure           |
+|----------------|-------------------------------|------------------------------|
+| `EXPECT_TRUE`  | Condition is true             | Non-fatal (continues test)    |
+| `ASSERT_TRUE`  | Condition is true             | Fatal (abort current function)|
+| `EXPECT_FALSE` | Condition is false            | Non-fatal                    |
+| `ASSERT_FALSE` | Condition is false            | Fatal                        |
+
+**Example:**
+
 ```cpp
-EXPECT_FALSE(condition);
-ASSERT_FALSE(condition);
+EXPECT_TRUE(IsValid(value));
+ASSERT_FALSE(IsError(state));
 ```
-Asserts that a condition is false.
+
+Failing assertions display detailed diagnostics including the expression and the values that caused the failure.
 
 ---
 
-### 4. Binary Comparisons
+## Binary Comparison
 
-These compare two values, requiring the types to support the corresponding operators.
+GoogleTest offers rich macros to compare two values using relational operators. On failure, the macros print the expected expression, actual expression, and their evaluated values (if printable).
 
-| Assertion | Description                              |
-|-----------|------------------------------------------|
-| EXPECT_EQ / ASSERT_EQ | Verify `val1 == val2`               |
-| EXPECT_NE / ASSERT_NE | Verify `val1 != val2`               |
-| EXPECT_LT / ASSERT_LT | Verify `val1 < val2`                |
-| EXPECT_LE / ASSERT_LE | Verify `val1 <= val2`               |
-| EXPECT_GT / ASSERT_GT | Verify `val1 > val2`                |
-| EXPECT_GE / ASSERT_GE | Verify `val1 >= val2`               |
+| Assertion            | Verifies                     | Notes                                    |
+|----------------------|-----------------------------|------------------------------------------|
+| `EXPECT_EQ(val1, val2)` | `val1 == val2`                | For C strings, compares pointers, not content—use `EXPECT_STREQ` instead. |
+| `EXPECT_NE(val1, val2)` | `val1 != val2`                | For C strings, compares pointers—use `EXPECT_STRNE` for content comparison. |
+| `EXPECT_LT(val1, val2)` | `val1 < val2`                 |                                            |
+| `EXPECT_LE(val1, val2)` | `val1 <= val2`                |                                            |
+| `EXPECT_GT(val1, val2)` | `val1 > val2`                 |                                            |
+| `EXPECT_GE(val1, val2)` | `val1 >= val2`                |                                            |
 
-**Important:**
-- For pointers, `EXPECT_EQ` checks pointer equality, not string or object content. Use `EXPECT_STREQ` for C strings.
-- Use `nullptr` in assertions for null pointer checks instead of `NULL` or `0`.
+There are corresponding `ASSERT_` variants that generate fatal failures.
 
-Example:
+**Example:**
 
 ```cpp
-ASSERT_EQ(expected_value, actual_value);
-EXPECT_LT(actual_size, max_size);
+EXPECT_EQ(foo.size(), bar.size()) << "Sizes differ";
+ASSERT_LT(value, max_value);
 ```
 
 ---
 
-### 5. String Comparison (C Strings and Wide Strings)
+## String Comparison
 
-| Assertion         | Description                               |
-|-------------------|-------------------------------------------|
-| EXPECT_STREQ / ASSERT_STREQ   | Verify two C strings have identical contents. |
-| EXPECT_STRNE / ASSERT_STRNE   | Verify two C strings differ in contents.       |
-| EXPECT_STRCASEEQ / ASSERT_STRCASEEQ | Verify two C strings equal ignoring case.      |
-| EXPECT_STRCASENE / ASSERT_STRCASENE | Verify two C strings differ ignoring case.     |
+Specialized macros exist for comparing null-terminated strings by value:
 
-Wide strings (`wchar_t*`, `std::wstring`) are also supported and converted to UTF-8 in failure outputs.
+| Assertion          | Description                                   |
+|--------------------|-----------------------------------------------|
+| `EXPECT_STREQ`     | Strings are equal (content equality)          |
+| `EXPECT_STRNE`     | Strings are not equal                          |
+| `EXPECT_STRCASEEQ` | Strings are equal, ignoring case               |
+| `EXPECT_STRCASENE` | Strings are not equal, ignoring case           |
 
-Example:
+**Important:** These compare C strings' contents, not pointers. For `std::string`, use `EXPECT_EQ` or `EXPECT_NE`.
+
+**Example:**
 
 ```cpp
-ASSERT_STREQ("hello", str);
-EXPECT_STRCASEEQ(L"FOO", L"foo");
+EXPECT_STREQ("hello", strdup_hello());
+ASSERT_STRCASEEQ(user_input.c_str(), "YES");
 ```
 
 ---
 
-### 6. Floating-Point Comparison
+## Floating-Point Comparison
 
-Because floating-point comparisons are prone to rounding errors, GoogleTest provides specialized assertions:
+Floating-point values are compared approximately to handle rounding errors.
 
-#### EXPECT_FLOAT_EQ / ASSERT_FLOAT_EQ
-Verifies two `float` values are approximately equal within 4 Units in the Last Place (ULPs).
+| Assertion           | Description                            |
+|---------------------|---------------------------------------|
+| `EXPECT_FLOAT_EQ`   | Compares two `float` values to within 4 ULPs |
+| `EXPECT_DOUBLE_EQ`  | Compares two `double` values likewise |
+| `EXPECT_NEAR(val1, val2, abs_error)` | Verifies that difference between values is within an absolute error bound |
 
-#### EXPECT_DOUBLE_EQ / ASSERT_DOUBLE_EQ
-Verifies two `double` values are approximately equal within 4 ULPs.
+**Example:**
 
-#### EXPECT_NEAR / ASSERT_NEAR
 ```cpp
-EXPECT_NEAR(val1, val2, abs_error);
+EXPECT_FLOAT_EQ(a, b);
+ASSERT_NEAR(distance, expected_distance, 0.01);
 ```
-Verifies the absolute difference between `val1` and `val2` is within `abs_error`.
 
-Be mindful that NaNs always cause failure; comparisons involving infinities are supported logically.
+These macros provide robust comparisons superior to naive `EXPECT_EQ` for floating-point numbers.
 
 ---
 
-### 7. Exception Assertions
+## Exception Assertions
 
-Use these to verify exception behavior (requires exceptions enabled).
+If exceptions are enabled, verify that code throws or does not throw exceptions.
 
-#### EXPECT_THROW / ASSERT_THROW
-```cpp
-EXPECT_THROW(statement, ExceptionType);
-```
-Verifies `statement` throws the specified exception type.
+| Assertion        | Description                                    |
+|------------------|------------------------------------------------|
+| `EXPECT_THROW(statement, exception_type)` | Checks if `statement` throws exception_type    |
+| `EXPECT_NO_THROW(statement)`     | Checks if `statement` does not throw            |
+| `EXPECT_ANY_THROW(statement)`    | Checks if `statement` throws any exception      |
 
-#### EXPECT_ANY_THROW / ASSERT_ANY_THROW
-Verifies `statement` throws any exception.
+Corresponding `ASSERT_` variants generate fatal failures.
 
-#### EXPECT_NO_THROW / ASSERT_NO_THROW
-Verifies `statement` does not throw any exceptions.
-
-Supports compound statements, e.g.: 
+**Example:**
 
 ```cpp
-EXPECT_THROW({ func(); cleanup(); }, MyException);
+EXPECT_THROW(Foo(), std::runtime_error);
+ASSERT_NO_THROW(ProcessData());
 ```
 
 ---
 
-### 8. Predicate Assertions
+## Predicate Assertions
 
-Allow fine-grained predicates with detailed failure messages.
+Predicate assertions provide flexible syntax to verify complex conditions while generating detailed diagnostic messages.
 
-#### EXPECT_PREDn / ASSERT_PREDn
-Check that a predicate function or functor of `n` arguments returns true.
+### Using Boolean Predicate Functions
 
-Example:
+If you have a function or functor returning `bool`, you can use `EXPECT_PREDn()` macros, where `n` is the number of arguments (up to 5). These macros evaluate the predicate and print the argument values on failure.
+
+**Macros:**
+
+- `EXPECT_PRED1(pred, v1)` through `EXPECT_PRED5(pred, v1, ..., v5)`
+- `ASSERT_PREDn` variants generate fatal failures
+
+**Example:**
 
 ```cpp
-bool IsEven(int n) { return (n % 2) == 0; }
-EXPECT_PRED1(IsEven, value);
+bool MutuallyPrime(int m, int n) { ... }
+EXPECT_PRED2(MutuallyPrime, a, b);
 ```
 
-#### EXPECT_PRED_FORMATn / ASSERT_PRED_FORMATn
-Similar to `PREDn` but use a predicate-formatter that provides detailed failure explanations.
+If the assertion fails, GoogleTest prints the predicate evaluation with argument values.
 
-Example:
+
+### Using AssertionResult-Based Predicates
+
+For richer diagnostic messages, define predicates returning `AssertionResult`:
 
 ```cpp
-AssertionResult IsPrime(const char* expr, int n) {
-  if (CheckPrime(n)) return AssertionSuccess();
-  return AssertionFailure() << expr << " is not prime";
-}
-EXPECT_PRED_FORMAT1(IsPrime, value);
-```
-
-Arguments are evaluated exactly once to prevent side effects.
-
----
-
-### 9. Windows HRESULT Assertions
-
-For testing Windows API calls that return `HRESULT` codes.
-
-#### EXPECT_HRESULT_SUCCEEDED / ASSERT_HRESULT_SUCCEEDED
-Verify that the expression returns a success `HRESULT`.
-
-#### EXPECT_HRESULT_FAILED / ASSERT_HRESULT_FAILED
-Verify that the expression returns a failure `HRESULT`.
-
-Failure output includes the readable error message for the code.
-
----
-
-### 10. Death Assertions
-
-Verify that code causes the process to terminate, useful for validating fatal error conditions.
-
-#### EXPECT_DEATH / ASSERT_DEATH
-```cpp
-EXPECT_DEATH(statement, regex_matcher);
-```
-Verifies that `statement` causes process termination and `stderr` output matches the given regular expression.
-
-#### EXPECT_DEATH_IF_SUPPORTED / ASSERT_DEATH_IF_SUPPORTED
-Runs `EXPECT_DEATH` if supported, otherwise does nothing.
-
-#### EXPECT_DEBUG_DEATH / ASSERT_DEBUG_DEATH
-Runs death test assertions only in debug mode; in release, executes `statement`.
-
-#### EXPECT_EXIT / ASSERT_EXIT
-```cpp
-EXPECT_EXIT(statement, exit_predicate, regex_matcher);
-```
-Verifies that `statement` exits with status satisfying `exit_predicate` (e.g., `ExitedWithCode(0)`) and matching `stderr` output.
-
----
-
-## Practical Tips and Best Practices
-
-- Use `EXPECT_` macros to keep your tests running after a failure, unless failure is unrecoverable, then choose `ASSERT_`.
-- Provide informative messages with `<<` to aid debugging.
-- Avoid mixing test logic and assertion failure messages.
-- For floating-point, prefer `EXPECT_FLOAT_EQ` or `EXPECT_NEAR` over simple equality.
-- Use `EXPECT_THROW` family to test exception safety and error handling.
-- When testing predicates, use `EXPECT_PREDn` or `EXPECT_PRED_FORMATn` for clear outputs.
-
-## Common Pitfalls
-
-- Comparing pointers with `EXPECT_EQ` does not compare contents; use string comparison macros for C strings.
-- Avoid relying on side-effects in assertion arguments: they are evaluated exactly once but evaluation order is undefined.
-- Macros like `EXPECT_DEATH` require the code under test to cause a process exit - only use in appropriate contexts.
-- Don't mix `EXPECT_` and `ASSERT_` for the same condition; choose based on fatality of failure.
-
----
-
-## Code Examples
-
-### Basic Assertions
-```cpp
-TEST(FooTest, BooleanChecks) {
-  EXPECT_TRUE(IsValid());
-  ASSERT_FALSE(IsEmpty()) << "Should not be empty";
+testing::AssertionResult IsEven(int n) {
+  if ((n % 2) == 0)
+    return testing::AssertionSuccess() << n << " is even";
+  else
+    return testing::AssertionFailure() << n << " is odd";
 }
 ```
 
-### Binary Comparison
+Use with `EXPECT_TRUE` or `ASSERT_TRUE`:
+
 ```cpp
-TEST(FooTest, IntegerEquality) {
-  int expected = 42;
-  int actual = ComputeAnswer();
-  EXPECT_EQ(expected, actual) << "Answer does not match";
-}
+EXPECT_TRUE(IsEven(num));
 ```
 
-### String Assertions
+Failed assertions will show detailed messages, including reasons for failure and success.
+
+### Using Predicate-Formatter Assertions
+
+If you require **full control over the failure message**, or your predicate arguments cannot be streamed directly, use predicate-formatter macros:
+
+| Macro                  | Description                           |
+|------------------------|-------------------------------------|
+| `EXPECT_PRED_FORMATn(pred_fmt, v1, ..., vn)` | Uses a predicate-formatter function which receives expressions and values |
+| `ASSERT_PRED_FORMATn`   | Same as above but fatal on failure   |
+
+The predicate-formatter must have the signature:
+
 ```cpp
-TEST(StringTest, CompareCStrings) {
-  const char* expected = "hello";
-  const char* actual = GetGreeting();
-  EXPECT_STREQ(expected, actual) << "Greeting mismatch";
-}
+testing::AssertionResult PredFmt(const char* expr1, ..., const T1& val1, ...);
 ```
 
-### Floating-Point Comparison
+**Example:**
+
 ```cpp
-TEST(FloatTest, ApproxEqual) {
-  float expected = 3.14f;
-  float actual = ComputePi();
-  EXPECT_FLOAT_EQ(expected, actual) << "Pi is incorrect";
+testing::AssertionResult AssertMutuallyPrime(
+  const char* m_expr, const char* n_expr, int m, int n) {
+  if (MutuallyPrime(m, n)) return testing::AssertionSuccess();
+  return testing::AssertionFailure() << m_expr << " and " << n_expr
+         << " (" << m << " and " << n << ") are not mutually prime.";
 }
+
+EXPECT_PRED_FORMAT2(AssertMutuallyPrime, a, b);
 ```
 
-### Exception Testing
+The generated message fully describes the failure, including the expressions and evaluated values.
+
+---
+
+## Message Streaming
+
+All assertions support streaming of custom failure messages using the `<<` operator:
+
 ```cpp
-TEST(ExceptionTest, ThrowsOnError) {
-  EXPECT_THROW({ ThrowError(); }, std::runtime_error);
-  EXPECT_NO_THROW({ SafeCode(); });
-}
+EXPECT_EQ(x, y) << "x and y differ at index " << i;
 ```
 
-### Predicate Assertion
-```cpp
-bool IsEven(int n) { return n % 2 == 0; }
+This message is appended to the standard diagnostic output, offering contextual details.
 
-TEST(PredicateTest, UsesPred) {
-  int val = 4;
-  EXPECT_PRED1(IsEven, val);
-}
-```
+---
 
-### Death Test
-```cpp
-TEST(DeathTest, ExitsOnFailure) {
-  EXPECT_DEATH({ FailAndExit(); }, "Fatal error");
-}
-```
+## Best Practices and Tips
+
+- Prefer `EXPECT_*` macros when possible to allow tests to continue and reveal multiple failures at once.
+- Use `ASSERT_*` macros when further execution doesn't make sense after failure (e.g., when dereferencing pointers).
+- Use predicate assertions to improve failure messages on complex or custom conditions.
+- Use **predicate-formatter** assertions if argument streaming isn't suitable or you want precise message control.
+- Avoid side effects in assertion arguments; GoogleTest evaluates each argument exactly once but argument order is unspecified.
+- Use `SUCCEED()` and `FAIL()` sparingly to clarify explicit success/failure scenarios.
+- Remember `ASSERT_*` and `FAIL()` must be used in *void* functions; for non-void, use non-fatal assertions or restructure your code.
 
 ---
 
 ## Troubleshooting
 
-- **Assertion fails unexpectedly:** Review failure message and ensure arguments are correct. Use custom messages to capture more context.
-- **Floating-point comparison fails:** Use floating-point specific assertions like `EXPECT_FLOAT_EQ` or `EXPECT_NEAR`.
-- **EXPECT_THROW doesn't catch exceptions:** Verify exceptions are thrown with correct types.
-- **Death test does not terminate:** Ensure code under test actually calls `exit` or causes fatal termination.
-- **String comparison fails on `EXPECT_EQ`:** Use `EXPECT_STREQ` for C strings.
+- **Assertion Message Not Shown?**
+  Make sure you stream messages using `<<` inside the assertion macro.
+
+- **ASSERT_* Used in Non-void Function?**
+  You will get confusing compile errors. Refactor your code to avoid this or use `EXPECT_*` instead.
+
+- **Predicate Assertion Causes Compiler Errors?**
+  For overloaded or template predicate functions, specify exact type or cast to resolve ambiguity.
+
+- **Assertion Arguments Evaluated Multiple Times?**
+  GoogleTest evaluates arguments exactly once. If you see unexpected behavior, ensure no macro side effects or undefined behavior.
+
+- **Strings Comparing by Pointer Instead of Content?**
+  Use `EXPECT_STREQ` and related macros for C string content comparison.
+
+- **Unexpected Test Failures on Floating-Points?**
+  Use `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR` instead of raw equality.
 
 ---
 
-## Conclusion
+## Example: Unary Predicate With AssertionResult
 
-Assertions form the backbone of your test verification strategy in GoogleTest. By using the rich variety of macros detailed above, you can precisely express the expected behavior of your code with useful failure diagnostics when things go wrong. Leverage predicate and matcher-based assertions for more complex scenarios, and death assertions for ensuring program stability under error conditions.
+```cpp
+#include <gtest/gtest.h>
 
+// Predicate returning AssertionResult with detailed feedback.
+testing::AssertionResult IsEven(int n) {
+  if (n % 2 == 0) return testing::AssertionSuccess() << n << " is even";
+  return testing::AssertionFailure() << n << " is odd";
+}
+
+TEST(PredicateTest, UnaryPredicate) {
+  EXPECT_TRUE(IsEven(4));
+  EXPECT_FALSE(IsEven(5));
+}
+```
+
+When the test fails on 5, output includes:
+
+```
+Value of: IsEven(5)
+  Actual: false (5 is odd)
+Expected: true
+```
+
+## Example: Binary Predicate-Formatter Assertion
+
+```cpp
+#include <gtest/gtest.h>
+
+bool MutuallyPrime(int m, int n) {
+  // Simple implementation just for illustration
+  for (int i = 2; i <= std::min(m, n); ++i) {
+    if (m % i == 0 && n % i == 0) return false;
+  }
+  return true;
+}
+
+// Predicate-formatter for detailed failure message
+
+testing::AssertionResult AssertMutuallyPrime(
+    const char* m_expr, const char* n_expr, int m, int n) {
+  if (MutuallyPrime(m, n)) return testing::AssertionSuccess();
+
+  return testing::AssertionFailure()
+      << m_expr << " and " << n_expr << " (" << m << " and " << n
+      << ") are not mutually prime.";
+}
+
+TEST(PredicateTest, BinaryPredicateFormatter) {
+  int a = 3, b = 4, c = 10;
+  EXPECT_PRED_FORMAT2(AssertMutuallyPrime, a, b);  // Passes
+  EXPECT_PRED_FORMAT2(AssertMutuallyPrime, b, c);  // Fails
+}
+```
+
+Failure output is:
+
+```
+b and c (4 and 10) are not mutually prime.
+```
+
+## Summary
+
+GoogleTest assertion macros and predicate assertions form an expressive suite enabling you to write tests with clear intention and precise failure reporting. From simple Boolean checks to detailed predicate-format assertions, GoogleTest helps uncover bugs with insightful diagnostics, facilitating fast, confident debugging and verification.
 
 ---
 
-## Related Documentation
+For a full list of assertion macros, examples, and predicate assertion details, refer to the [GoogleTest Assertions Reference](reference/assertions.md).
 
-- [Matchers Reference](matchers.md)
-- [GoogleMock for Dummies](gmock_for_dummies.md) for integrating assertions in mock-based tests
-- [Advanced Assertions and Matchers](../guides/core-workflows/advanced-assertions-matchers) for deeper understanding
-- [Test Structure & Execution API](../api-reference/core-testing/test-structure) for running and organizing tests
+Explore also advanced topics on [Custom Assertions](../concepts/extensibility-and-performance/custom-assertions-and-matchers) and [Predicate Assertions](docs/advanced.md#more-assertions) for deeper mastery.
 
 ---
 
-## Contributing and Source
+## See Also
 
-Source and tests can be found at the [GoogleTest GitHub repository](https://github.com/google/googletest/tree/main).
+- [GoogleTest Primer](docs/primer.md)
+- [Advanced GoogleTest Topics](docs/advanced.md)
+- [Mocking Reference](docs/reference/mocking.md)
+- [Testing Reference](docs/reference/testing.md)
+
+---
+
+## Illustrative API Overview
+
+| Assertion Type             | Macros Example                                                               | Description                                                  |
+|----------------------------|-----------------------------------------------------------------------------|--------------------------------------------------------------|
+| Explicit Success/Failure   | `SUCCEED()`, `FAIL()`, `ADD_FAILURE()`                                     | Mark fixed success or failure points                         |
+| Boolean Checks             | `EXPECT_TRUE(condition)`, `ASSERT_FALSE(expr)`                             | Check conditions quickly with pass/fail                      |
+| Binary Comparisons         | `EXPECT_EQ(expected, actual)`, `ASSERT_LT(a, b)`                          | Compare values for equality and ordering                     |
+| String Assertions          | `EXPECT_STREQ(str1, str2)`, `ASSERT_STRCASEEQ(a, b)`                       | Compare C string contents                                    |
+| Floating-Point Comparison  | `EXPECT_FLOAT_EQ(a, b)`, `ASSERT_NEAR(x, y, abs_error)`                   | Approximate floating-point comparisons                       |
+| Exception Assertions       | `EXPECT_THROW(expr, ExceptionType)`, `ASSERT_NO_THROW(stmt)`              | Verify exceptions are (not) thrown                           |
+| Predicate Assertions       | `EXPECT_PRED1(pred, v1)`, `ASSERT_PRED_FORMAT2(pred_formatter, v1, v2)`    | Complex predicates with improved diagnostics                 |
 
 ---
