--- a/api-reference/mocking-framework/expectations-actions.mdx
+++ b/api-reference/mocking-framework/expectations-actions.mdx
@@ -1,263 +1,233 @@
 ---
-title: "Setting Expectations and Actions"
-description: "Explains the ON_CALL and EXPECT_CALL macros, which allow users to specify expected calls, argument matchers, return values, and reactions to function invocations for mock objects. Includes documentation of chained expectations, sequences, and call behaviors."
+title: "Setting Expectations & Actions"
+description: "Explores the core APIs for setting call expectations, specifying invocation counts, and providing actions (return values, side effects, exceptions) for mock methods. Illustrates ON_CALL(), EXPECT_CALL(), and flexible action composition."
 ---
 
-# Setting Expectations and Actions
+# Setting Expectations & Actions
 
-The `ON_CALL` and `EXPECT_CALL` macros form the core of GoogleMock's (gMock) **spec builder syntax**, enabling you to specify default behaviors and detailed expectations on mock methods in your tests. This page explains how to use these macros to define expected calls, argument matchers, return values, and how to control invocation sequences and call behaviors for mock objects.
+This documentation explores the core GoogleMock APIs for specifying how mock methods behave, the expected calls on them, and the actions they perform when invoked. Understanding these APIs lets you finely control your mock objects to verify interactions precisely and simulate real behavior effectively.
 
 ---
 
 ## Overview
 
-Mock objects by themselves have no behavior; you control how they react using `ON_CALL` and set expectations using `EXPECT_CALL`. Understanding and mastering these macros is crucial to writing effective, maintainable, and precise tests with GoogleMock.
+When writing tests with mock objects, you use GoogleMock’s macros and functions to:
 
-- **`ON_CALL`** defines the *default behavior* of a mock method when it is invoked without corresponding explicit expectations. It does **not** imply that the method must be called.
-- **`EXPECT_CALL`** sets an expectation that a mock method *will* be called according to the defined argument matchers, invocation counts, and call order.
+- Set **default behaviors** of mock methods when called (`ON_CALL`).
+- Establish **expectations** that certain method calls *must* happen (`EXPECT_CALL`).
+- Specify **how often** methods are expected to be called.
+- Define **the actions** (return values, side effects, exceptions, etc.) mock methods take when invoked.
 
-When combining these, remember:
-
-- The **last matching** `EXPECT_CALL` or `ON_CALL` declaration that matches the arguments of the call takes precedence.
-- `EXPECT_CALL` actions override `ON_CALL` default actions.
+This guide walks through `ON_CALL()`, `EXPECT_CALL()`, the rich qualifiers and clauses you can use with them, and how to compose actions for flexible, expressive test specifications.
 
 ---
 
-## Using `ON_CALL` to Set Default Behaviors
+## Using ON_CALL: Setting Default Behavior
 
-`ON_CALL` specifies the behavior a mock method should perform when called without an explicit expectation set by `EXPECT_CALL`. This is useful to provide fallback behavior for methods whose calls you do not want to strictly verify.
-
-### Syntax
+`ON_CALL(mock_object, method_name(matchers))` lets you define **default behavior** for a mock method when called with matching arguments, without asserting that the call must happen.
 
 ```cpp
-ON_CALL(mock_object, Method(matchers))
-    [.With(multi_arg_matcher)]
-    .WillByDefault(action);
+ON_CALL(my_mock, DoSomething(_))
+    .WillByDefault(Return(true));
 ```
 
-- `matchers` specify argument expectations (omitting implies wildcard for each argument).
-- `.With()` takes an optional matcher for the entire argument tuple.
-- `.WillByDefault()` **must** be provided once to set the action executed.
+- **Purpose:** Specify what the mock method does if called.
+- **Matchers:** Argument matchers narrow the scope of this behavior.
+- **Chaining:** Use `.With()` once to restrict arguments considered as a tuple.
+- **Required Clause:** Must end with `.WillByDefault(action)`, specifying the behavior.
 
-### Example
+### ON_CALL Clauses
+
+| Clause        | Description                                                                   |
+| ------------- | ----------------------------------------------------------------------------- |
+| `.With(m)`    | Restricts call to those whose *all* arguments (as a tuple) match `m`.         |
+| `.WillByDefault(action)` | Specifies the behavior (action) for matching calls.                         |
+
+### Important Notes
+
+- Multiple `ON_CALL` statements are applied in order; **the last matching one takes precedence**.
+- `ON_CALL` does **not** set expectations on call counts or enforce calls—it just specifies behavior.
+
+---
+
+## Using EXPECT_CALL: Setting Expectations
+
+`EXPECT_CALL(mock_object, method_name(matchers))` creates an **expectation** that a mock method will be called with matching arguments.
 
 ```cpp
+EXPECT_CALL(my_mock, Compute(Ge(0)))
+    .Times(AtLeast(1))
+    .WillOnce(Return(42))
+    .WillRepeatedly(Return(0));
+```
+
+- **Purpose:** Verify that the mock method is called as expected.
+- **Matchers:** Specify which arguments are expected.
+- **Chaining modifiers:** Customize call count, order, and behavior.
+
+### Chaining Clauses and Their Order
+
+| Clause                 | Purpose | Constraints |
+|------------------------|---------|-------------|
+| `.With(multi_arg_matcher)` | Restricts matches to calls whose argument tuple matches `m` (can be used once and must be first)
+| `.Times(cardinality)`        | Sets the expected call count (use once max)
+| `.InSequence(sequences...)` | Specifies sequences this call participates in (can be used multiple times)
+| `.After(expectations...)`   | Specifies calls that must precede this one (can be used multiple times)
+| `.WillOnce(action)`         | Specifies one-time behaviors (can be used multiple times, each action used once)
+| `.WillRepeatedly(action)`   | Specifies behavior after all `WillOnce`s are exhausted (use once max)
+| `.RetiresOnSaturation()`    | Indicates expectation becomes inactive after reaching its upper call limit (use once and last)
+
+### Call Cardinalities
+
+GoogleMock provides cardinalities to specify how many times calls are expected:
+
+| Cardinality         | Description                                  |
+|---------------------|----------------------------------------------|
+| `Exactly(n)` or `n` | Expect exactly *n* calls (0 means never called).
+| `AtLeast(n)`        | Expect at least *n* calls.
+| `AtMost(n)`         | Expect at most *n* calls.
+| `Between(m, n)`     | Expect calls between *m* and *n*, inclusive.
+| `AnyNumber()`       | Zero or more calls allowed.
+
+If `.Times()` is omitted, the cardinality is **inferred** from the presence of `.WillOnce()` and `.WillRepeatedly()` clauses:
+
+- No `WillOnce` or `WillRepeatedly`: inferred as `Times(1)`
+- *n* `WillOnce`s and no `WillRepeatedly`: inferred as `Times(n)`
+- *n* `WillOnce`s and one `WillRepeatedly`: inferred as `Times(AtLeast(n))`
+
+### Ordering Expectations
+
+gMock matches expectations in **reverse definition order**, so later expectations override earlier ones. For call ordering enforcement:
+
+- Use `InSequence` objects to define sequences where calls must occur in declaration order.
+- Use `.After()` to build custom partial orders.
+
+Example of sequence usage:
+
+```cpp
+Sequence seq1, seq2;
+EXPECT_CALL(my_mock, Foo()).InSequence(seq1);
+EXPECT_CALL(my_mock, Bar()).InSequence(seq1, seq2);
+EXPECT_CALL(my_mock, Baz()).InSequence(seq2);
+```
+
+This establishes partial ordering of expectations.
+
+### Retiring Expectations
+
+Normally, expectations remain active even after being satisfied, causing errors on excess calls matching the same expectation. To avoid this, use `.RetiresOnSaturation()` to retire an expectation after its upper bound is reached, allowing other expectations to match later calls.
+
+## Actions: Controlling What Mock Methods Do
+
+An **action** defines what a mock method does when called, including returning values, throwing exceptions, or side effects. Use actions with `ON_CALL` and `EXPECT_CALL` with `.WillOnce()`, `.WillRepeatedly()`, or `.WillByDefault()`.
+
+### Common Built-in Actions
+
+| Action                          | Description                                         |
+|--------------------------------|-----------------------------------------------------|
+| `Return(value)`                | Returns a fixed value (copied at expectation creation). |
+| `ReturnRef(variable)`          | Returns a reference to a variable (live value changes).  |
+| `ReturnPointee(ptr)`           | Returns the value pointed to by `ptr` at call time.     |
+| `ReturnNew<T>(args...)`        | Returns a new `T` instance allocated on heap every call. |
+| `DeleteArg<N>()`               | Deletes the N-th argument, which must be a pointer.      |
+| `SetArgPointee<N>(value)`      | Sets the pointed-to value of the N-th argument.          |
+| `DoAll(action1, action2, ...)` | Executes several actions in sequence; return value of last. |
+| `Invoke(f)`                   | Calls function/functor/lambda with the mock call's args. |
+| `InvokeWithoutArgs(f)`        | Calls a zero-arg function/functor when mock method invoked. |
+| `InvokeArgument<N>(args...)`  | Calls the N-th function argument with provided args.     |
+| `Throw(exception)`            | Throws the given exception on call.                      |
+| `DoDefault()`                 | Performs the default action (specified by `ON_CALL` or built-in). |
+| `IgnoreResult(action)`        | Ignores the return value of the action, useful for void returns. |
+
+### Example: Combining Actions
+
+```cpp
+EXPECT_CALL(foo, Bar(_))
+    .WillOnce(DoAll(SetArgPointee<1>(5), Return(true)));
+```
+
+Here, the mock method will set the second argument to 5 and return `true`.
+
+### Using Functors or Lambdas as Actions
+
+You can specify any callable compatible with the mock method signature:
+
+```cpp
+EXPECT_CALL(mock, Compute(_))
+    .WillOnce([](int x) { return x*x; });
+```
+
+Lambdas or functors can capture context and perform complex behavior.
+
+---
+
+## Best Practices
+
+- Use `ON_CALL` to define default behaviors shared by many tests.
+- Use `EXPECT_CALL` when you want to verify calls are made as expected.
+- Avoid overly restrictive argument matchers—use `_` for 'don't care' arguments.
+- Use sequences and `.After()` to express call ordering only when necessary.
+- Use `.RetiresOnSaturation()` to avoid stale expectations causing failures.
+- For move-only types, `MOCK_METHOD` supports them naturally; return values with lambdas.
+- Use `NiceMock` to suppress warnings for uninteresting calls, `StrictMock` to make them errors.
+
+---
+
+## Common Pitfalls & Troubleshooting
+
+- **Expectations must be set *before* mock methods are called.** Setting expectations after calls leads to undefined behavior.
+- **Overlapping expectations:** The last matching `EXPECT_CALL` takes precedence. Order matters.
+- **Forgotten `.Times(0)` expectation:** To assert a method is never called, write `EXPECT_CALL(foo, Bar(_)).Times(0);`
+- **Uninteresting call warnings:** Use `NiceMock` or add catch-all expectations with `.Times(AnyNumber())`.
+- **Too few or too many actions:** Warnings appear if your `.WillOnce()` clauses don’t align with `.Times()`.
+- **Mock leaks:** If mock objects are not deleted, expectations are never validated. Use `Mock::AllowLeak(mock)` to suppress errors when intentional.
+
+---
+
+## Quick Start Example
+
+```cpp
+#include <gmock/gmock.h>
 using ::testing::Return;
 using ::testing::_;
-
-ON_CALL(mock_turtle, GetX())
-    .WillByDefault(Return(10));
-```
-
-Here `GetX()` will return 10 by default if no `EXPECT_CALL` explicitly handles the call.
-
----
-
-## Using `EXPECT_CALL` to Set Expectations and Actions
-
-`EXPECT_CALL` declares a requirement that a mock method is called with specified arguments, a certain number of times, optionally in a given order, and defines what the method should do when called.
-
-### Syntax
-
-```cpp
-EXPECT_CALL(mock_object, Method(matchers))
-    [.With(multi_arg_matcher)]        // Optional, once
-    [.Times(cardinality)]             // Optional, once
-    [.InSequence(sequences...)]       // Optional, multiple
-    [.After(expectations...)]         // Optional, multiple
-    [.WillOnce(action)]               // Optional, multiple
-    [.WillRepeatedly(action)]         // Optional, once
-    [.RetiresOnSaturation()];         // Optional, once
-```
-
-Clauses must appear in the order above. Multiple `.InSequence`, `.After`, and `.WillOnce` clauses can be used; others at most once.
-
-### Detailed Clause Descriptions
-
-- **`.With(multi_arg_matcher)`** — Restricts expectation to calls matching the entire argument tuple.
-
-- **`.Times(cardinality)`** — Specifies how many times this call is expected, using GoogleMock cardinalities such as `Exactly(n)`, `AtLeast(n)`, and `AnyNumber()`.
-
-  If omitted, cardinality is inferred from the count of `WillOnce` and `WillRepeatedly` based on this logic:
-  - No actions: `Times(1)`.
-  - `n` `WillOnce` clauses, no `WillRepeatedly`: `Times(n)`.
-  - `n` `WillOnce` and one `WillRepeatedly`: `Times(AtLeast(n))`.
-
-- **`.InSequence(sequences...)`** — Specifies that this expectation belongs to one or more sequences; calls for expectations included in a `Sequence` object must occur in the order declared.
-
-- **`.After(expectations...)`** — Specifies prerequisite expectations that must be satisfied before this expectation can match. Supports up to 5 `Expectation` or `ExpectationSet` arguments.
-
-- **`.WillOnce(action)`** — Defines the action performed once per matching call; multiple can be chained to define different behaviors for successive calls.
-
-- **`.WillRepeatedly(action)`** — Defines an action for all subsequent calls once the `WillOnce` sequence is exhausted.
-
-- **`.RetiresOnSaturation()`** — Marks the expectation as *inactive* after it is saturated (i.e., max call count reached). This affects matching behavior by retiring the expectation so that it won't match further calls, letting earlier expectations match instead.
-
-### Example
-
-```cpp
-using ::testing::Return;
 using ::testing::AtLeast;
-using ::testing::InSequence;
 
-Sequence s;
-EXPECT_CALL(mock, DoThing(42))
-    .Times(2)
-    .WillOnce(Return(true))
-    .WillOnce(Return(false))
-    .RetiresOnSaturation()
-    .InSequence(s);
-EXPECT_CALL(mock, DoThing(_))
-    .Times(AnyNumber())
-    .WillRepeatedly(Return(true));
+class MockFoo {
+ public:
+  MOCK_METHOD(int, GetValue, (), (const));
+  MOCK_METHOD(void, DoWork, (int x));
+};
 
-// The above expects DoThing(42) to be called twice in order and retire after saturated,
-// thereafter DoThing with any argument can still be called any number of times and returns true.
-```
+TEST(FooTest, Example) {
+  MockFoo mock;
 
----
+  // Set default behavior:
+  ON_CALL(mock, GetValue()).WillByDefault(Return(5));
 
-## Chained Expectations and Sequences
+  // Expect GetValue() to be called at least once, returning 5 each time:
+  EXPECT_CALL(mock, GetValue()).Times(AtLeast(1));
 
-You can control the order of calls using **sequences** and the `.After()` clause.
+  // Expect DoWork to be called with argument 10 exactly once.
+  EXPECT_CALL(mock, DoWork(10)).Times(1);
 
-### Using `Sequence` and `InSequence`
-
-The `Sequence` class lets you define partial orders for expectations using sequences. Assigning expectations to the same `Sequence` enforces a strict call order among them.
-
-The `InSequence` helper class automatically assigns all expectations in its scope to an anonymous `Sequence`.
-
-```cpp
-using ::testing::InSequence;
-
-{
-  InSequence s;
-  EXPECT_CALL(mock, FirstCall());
-  EXPECT_CALL(mock, SecondCall());
+  // Exercise code:
+  EXPECT_EQ(mock.GetValue(), 5);
+  mock.DoWork(10);
 }
 ```
 
-This ensures `FirstCall()` happens before `SecondCall()`.
+---
 
-### Using `.After()` for Flexible Ordering
+## Additional Resources
 
-`.After()` lets you specify that an expectation must only be matched after other expectations, allowing partial ordering (DAG) of calls.
-
-```cpp
-using ::testing::Expectation;
-Expectation e1 = EXPECT_CALL(mock, Init());
-EXPECT_CALL(mock, DoWork()).After(e1);
-```
-
-This means `DoWork()` must be called after `Init()`.
-
-You can also use `ExpectationSet` to specify multiple prerequisites.
+- [GoogleMock Mocking Reference](reference/mocking.md) — Full details on mocking
+- [gMock for Dummies](docs/gmock_for_dummies.md) — Beginner-friendly overview
+- [gMock Cheat Sheet](docs/gmock_cheat_sheet.md) — Quick reference
+- [gMock Cookbook](docs/gmock_cook_book.md) — Recipes and best practices
+- [Actions Reference](reference/actions.md) — Details on all built-in actions
 
 ---
 
-## Behavior and Error Handling
+Understanding expectations and actions is key to mastering writing expressive and robust tests with GoogleMock. Use the power to simulate complex behaviors, verify call interactions precisely, and build maintainable test suites with confidence.
 
-### Matching Logic
 
-- GoogleMock matches calls to the *last* (most recent) matching `EXPECT_CALL` or `ON_CALL`.
-- If no expectation matches, it falls back to default actions if defined with `ON_CALL`.
-- If no matching expectation or default action exists, an *uninteresting call* occurs.
-
-### Uninteresting Calls
-
-Calling a mock method without an `EXPECT_CALL` matching the arguments generates a *warning* (naggy behavior), unless the mock is a `NiceMock` (suppresses warnings) or a `StrictMock` (treats warnings as failures).
-
-### Unexpected Calls
-
-Calls that match with some `EXPECT_CALL` defined but whose arguments do not match any expectation are *unexpected* and lead to test failures.
-
-### Saturation and Retirement
-
-An expectation is *saturated* when it reaches its maximum number of expected calls.
-- Without `.RetiresOnSaturation()`, saturated expectations remain active and will cause failures if called more
-- With `.RetiresOnSaturation()`, saturated expectations retire and will no longer match, letting earlier (less specific) expectations apply.
-
-### Cardinality Violations
-
-Expecting more or fewer calls than specified violates the cardinality and triggers GoogleTest failures, detailing:
-
-- The expected number of calls
-- The actual number of calls
-- Whether the expectation is saturated or unsatisfied
-
----
-
-## Common Usage Patterns and Tips
-
-### 1. Setting Default Behavior Then Testing Specific Use Cases
-
-Use `ON_CALL` in your mock constructor or test setup to provide general fallback behavior. Use `EXPECT_CALL` sparingly to test particular interactions.
-
-### 2. Catch-All Expectations
-
-Set a general expectation for calls you don't care about to suppress warnings:
-
-```cpp
-EXPECT_CALL(mock, SomeMethod(_)).Times(AnyNumber());
-```
-
-### 3. Use Sequences or `.RetiresOnSaturation()` to Manage Call Order
-
-When calls must happen in specific order, use `Sequence` or wrap expectations in an `InSequence` to enforce order.
-
-If expectations should retire after being satisfied to allow other expectations to match, use `.RetiresOnSaturation()`.
-
-### 4. Watch for Sticky Expectations
-
-By default, an expectation remains active even after being saturated, meaning the last matching expectation applies until `.RetiresOnSaturation()` or ordering makes it inactive.
-
----
-
-## Troubleshooting
-
-- **Uninteresting mock function call warnings:** Consider if you meant to have an expectation; use `ON_CALL` to set defaults and `EXPECT_CALL` to verify calls explicitly.
-- **Unexpected mock function call errors:** Check if arguments failed to match any existing expectation. Use `--gmock_verbose=info` to trace calls and matching decisions.
-- **Excessive call failures:** Ensure the number of calls does not exceed the cardinality specified in `Times()` or inferred from `WillOnce` and `WillRepeatedly`.
-- **Expectation ordering problems:** Confirm that expectations using `InSequence` or `.After()` clauses are correctly set before calls happen. Mix sequences and `.RetiresOnSaturation()` appropriately.
-
-For detailed debugging, run your tests with `--gmock_verbose=info` to see trace messages for mock invocations and matches.
-
----
-
-## Internal Mechanics and Thread Safety
-
-GoogleMock protects internal mock state using a global mutex to ensure thread-safe state transitions on expectations and call matching.
-
-Mock methods automatically verify that all expectations are satisfied on destruction, or via explicit calls to:
-
-```cpp
-Mock::VerifyAndClearExpectations(&mock_object);
-Mock::VerifyAndClear(&mock_object);
-```
-
-Use `Mock::AllowLeak(&mock_object)` to suppress leak warnings if intentionally leaking mocks.
-
----
-
-## Summary
-
-- Use `ON_CALL` to establish default mock behaviors without enforcing calls.
-- Use `EXPECT_CALL` to specify expected calls, argument matchers, invocation counts, call order (`Sequence` and `.After()`), and return actions.
-- Chain multiple `WillOnce()` calls for different call results, use `WillRepeatedly()` for repetitive call behavior.
-- Manage call order flexibly using sequences and `.After()`.
-- Use `.RetiresOnSaturation()` to retire expectations when saturated, enabling fallback matching.
-- Understand uninteresting vs unexpected calls and configure mock strictness with `NiceMock` / `StrictMock`.
-- Run tests with verbosity (`--gmock_verbose=info`) to trace mock call matching and diagnose failures.
-
----
-
-## See Also
-
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly introduction to mocks
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Practical recipes on using expectations and actions
-- [Matchers Reference](reference/matchers.md) — Argument matching
-- [Actions Reference](reference/actions.md) — Defining mock behaviors
-- [MOCK_METHOD and EXPECT_CALL Macros](reference/mocking.md#macros) — Syntax and clauses
-- [Managing Mock Strictness (NiceMock, StrictMock)](reference/mocking.md#NiceStrictNaggy)
-
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googlemock/include/gmock/gmock-spec-builders.h", "range": "1-447"},{"path": "googlemock/src/gmock-spec-builders.cc", "range": "1-447"}]} />
